<resources>
    <string name="app_name">TripBook</string>

    <!--  프로필 설정  -->
    <string name="nickname_label">멋진 여행 기록을 위해\n닉네임을 입력해주세요</string>
    <string name="nickname_button">닉네임 만들었어요</string>
    <string name="nickname_hint">10자 이내 한글 혹은 영문, 숫자로 입력해주세요.</string>
    <string name="profile_label">멋진 여행 기록을 위해\n프로필 이미지를 등록해주세요</string>
    <string name="profile_later_label">다음에 할게요</string>
    <string name="album">앨범에서 사진 선택</string>
    <string name="camera">지금 사진 촬영</string>
    <string name="basic_image">기본 이미지 사용</string>
    <string name="profile_cancel">취소</string>
    <string name="profile_button">이미지 등록했어요</string>
    <string name="nickname_sign_alert">한글, 영어, 숫자를 입력해주세요</string>
    <string name="nickname_length_alert">10글자 이내 한글 또는 영문, 숫자를 입력해주세요</string>
    <string name="nickname_duplicate_alert">다른 분이 사용 중인 닉네임입니다</string>

    <!--  약관 동의  -->
    <string name="terms_label">서비스 이용 약관을 확인해주세요</string>
    <string name="all_terms_agree">전체동의</string>
    <string name="terms_service">(필수) 서비스 이용약관 동의</string>
    <string name="terms_personal_info">(필수) 개인정보 수집 및 이용 동의</string>
    <string name="terms_location">(필수) 위치정보수집 및 이용동의</string>
    <string name="terms_marketing">(선택) 마케팅 수신 동의</string>
    <string name="terms_button">다음으로 넘어가요</string>
    <string name="close">닫기</string>
    <string name="additional_textView_label">조금 더 알아볼게요</string>
    <string name="additional_gender_label">성별을 선택해주세요</string>
    <string name="additional_button_female">여성</string>
    <string name="additional_button_male">남성</string>
    <string name="additional_age_label">생일을 작성해주세요</string>
    <string name="additional_age_hint">나이 입력</string>
    <string name="additional_button_complete">입력 완료</string>
    <string name="additional_birth_warning">생년월일을 모두 입력해주세요</string>

    <!--my info-->
    <string name="info">마이페이지</string>
    <string name="info_ask_title">1:1문의</string>
    <string name="logout">로그아웃</string>
    <string name="info_version">버전정보</string>
    <string name="info_profile_title">프로필 수정</string>
    <string name="info_profile_confirm">확인</string>
    <string name="info_ask">서비스에 대한 궁금한 점이나 의견이 있으신가요?</string>
    <string name="info_ask2">문의사항에 대한 답변은 2–3일 정도 소요될 수 있습니다.</string>
    <string name="info_ask3">의견 보내기</string>
    <string name="info_logout">로그아웃 되었습니다.</string>
    <string name="info_logout2">다음에 또 만나요!</string>
    <string name="info_memberDel"><u>회원탈퇴</u></string>

    <string name="news_add_title_hint">제목을 입력해주세요</string>
    <string name="news_add_editText_hint">최소 800자 이상의 글자수를 작성해주세요</string>
    <string name="news_add_temp_save">임시저장</string>
    <string name="news_add_pic_add">사진을 등록해주세요</string>
    <string name="news_add_title_length">/30</string>
    <string name="news_add_button_location">여행지 선택</string>
    <string name="news_add_location_text">여행지를 검색해주세요</string>
    <string name="text_options_title">제목</string>
    <string name="text_options_subtitle">소제목</string>
    <string name="text_options_maintext">본문</string>
    <string name="text_options_bold">B</string>
    <string name="temp_save_label">임시저장 목록</string>
    <string name="temp_save_button">선택</string>
    <string name="temp_save_list">임시 %d</string>
    <string name="check">확인</string>
    <string name="temp_save_popup_title">임시저장 되었습니다!</string>
    <string name="temp_save_popup_content">PC 및 다른 기기에서도 이어서\n작성이 가능합니다.</string>
    <string name="temp_save_delete">삭제하시겠습니까?</string>
    <string name="temp_save_delete_button">삭제하기</string>
    <string name="news_add_title">여행소식 작성</string>
    <string name="news_add_button">등록</string>
    <string name="news_add_characters">/10,000</string>

    <!-- 회원 탈퇴 -->
    <string name="memberDel_mainText">회원 탈퇴를 진행하시면 \n기존에 작성된 작성 게시글이 모두 삭제됩니다.</string>
    <string name="memberDel_subText">회원탈퇴를 진행하시려면 닉네임을 입력해주세요</string>
    <string name="memberDel_nick_placeholder">닉네임 입력</string>
    <string name="memberDel_confirm">탈퇴 진행</string>
    <string name="memberDel_Cancel">탈퇴 취소</string>
    <string name="memberDel_error_msg">닉네임이 일치하지 않습니다.</string>
    <string name="memberDel_Success_MianText">님의 회원탈퇴가\n정상적으로 처리되었습니다.</string>
    <string name="memberDel_Success_SubText">트립북을 이용해주셔서 감사합니다.</string>

    <!--  news main  -->
    <string name="home">홈</string>
    <string name="add">등록</string>
    <string name="my_profile">내 정보</string>
    <string name="additional_birth_hint">YYYY-DD-MM</string>
    <string name="additional_birth_text">%d-%02d-%02d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trip_news_main">여행소식</string>
    <string name="search_recent_keyword">최근 검색어</string>
    <string name="search_clear_all">전체삭제</string>
    <string name="search_keyword_hint">검색어를 입력하세요</string>
    <string name="search">검색</string>
    <string name="version_name">버전정보 v %1$s</string>

    <string name="created_asc">최신순</string>
    <string name="created_desc">오래된순</string>
    <string name="popularity">인기순</string>
</resources>