<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|center">
        <LinearLayout
            android:layout_width="@dimen/profile_dialog_width"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog"
            android:orientation="vertical">

            <TextView
                android:id="@+id/album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_dialog_margin"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/album"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/profile_dialog_margin"
                android:background="#bdbbbb" />

            <TextView
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_dialog_margin"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/camera"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/profile_dialog_margin"
                android:background="#bdbbbb"/>

            <TextView
                android:id="@+id/basic_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_dialog_margin"
                android:layout_marginBottom="@dimen/profile_dialog_margin"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/basic_image"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="@dimen/profile_dialog_width"
            android:layout_height="wrap_content"
            android:background="@drawable/border_dialog_cancel"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="48dp"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="@string/profile_cancel"/>
    </LinearLayout>
</layout>
