<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.widget.ImageView" />

        <variable
            name="viewModel"
            type="com.tripbook.tripbook.viewmodel.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/profile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/profile_label_margin"
            android:text="@string/profile_label"
            style="@style/ProfileLabelStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="56dp"
            android:background="#F2F2F2"
            android:contentDescription="@string/profile_label"
            android:src="@drawable/ic_image"
            android:scaleType="fitXY"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_label" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="nickname"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/profile_later_label"
            app:layout_constraintBottom_toTopOf="@+id/profile_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/profile_button_horizontal"
            android:layout_marginRight="@dimen/profile_button_horizontal"
            android:layout_marginBottom="@dimen/profile_button_bottom"
            android:enabled="@{viewModel.isProfileValid()}"
            android:padding="@dimen/profile_button_padding"
            android:text="@string/profile_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
